Introduce multi-line comments (use // and /* */ for primary)

--- a/schema.conf
+++ b/schema.conf
@@ -1,4 +1,5 @@
 #This is a comment
 
-value = content #Another comment
+value = content //Another comment
 this = istext #As well as spaces are going to be ignored
+
