--- a/schema.conf
+++ b/schema.conf
@@ -1,5 +1,10 @@
-#This is a comment
+/*
+This program is distributed in the hope that it will be useful,
+but WITHOUT ANY WARRANTY; without even the implied warranty of
+MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+GNU General Public License for more details.
+*/
 
 value = content //Another comment
-this = istext #As well as spaces are going to be ignored
+this = istext //As well as spaces are going to be ignored
 
